--- a/shared/heart_state/pubspec.yaml
+++ b/shared/heart_state/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   heart_models:
     path: '../heart_models'
   provider: ^6.1.2
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
