--- a/shared/heart_state/pubspec.yaml
+++ b/shared/heart_state/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   google_sign_in: ^6.2.2
   heart_models:
     path: '../heart_models'
+  logging: ^1.3.0
   provider: ^6.1.2
   shared_preferences: ^2.3.2
 
