--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
     path: 'shared/heart_models'
   heart_state:
     path: 'shared/heart_state'
+  intl: any
 
 dev_dependencies:
   flutter_test:
