--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,13 +9,13 @@ environment:
   flutter: ^3.27.0
 
 dependencies:
-  firebase_core: ^3.9.0
+  firebase_core: ^3.10.0
   flutter:
     sdk: flutter
   flutter_colorpicker: ^1.1.0
   flutter_localizations:
     sdk: flutter
-  go_router: ^14.6.2
+  go_router: ^14.6.3
   heart_language:
     path: 'shared/heart_language'
   heart_models:
@@ -23,6 +23,7 @@ dependencies:
   heart_state:
     path: 'shared/heart_state'
   intl: any
+  sentry_flutter: ^8.12.0
 
 dev_dependencies:
   flutter_test:
