--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_colorpicker: ^1.1.0
+  flutter_local_notifications: ^18.0.1
   flutter_localizations:
     sdk: flutter
   go_router: ^14.6.3
