--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 
 dependencies:
   firebase_core: ^3.10.0
+  fl_chart: ^0.70.1
   flutter:
     sdk: flutter
   flutter_colorpicker: ^1.1.0
