--- a/shared/heart_state/pubspec.yaml
+++ b/shared/heart_state/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
     path: '../heart_models'
   provider: ^6.1.2
   shared_preferences: ^2.3.2
+  sign_in_with_apple: ^6.1.4
 
 dev_dependencies:
   flutter_test:
