--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ version: 1.0.0+1
 
 environment:
   sdk: ^3.6.0
-  flutter: ^3.27.0
+  flutter: 3.27.1
 
 dependencies:
   firebase_core: ^3.10.0
@@ -33,6 +33,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  test: any
 
 
 flutter:
