--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -24,7 +24,7 @@ jobs:
         run: flutter pub get
 
       - name: Generate code
-        run: flutter pub run build_runner build --delete-conflicting-outputs
+        run: cd shared/heart_models &&  dart run build_runner build --delete-conflicting-outputs && cd ../..
 
       - name: Run tests in Models
         run: flutter test shared/heart_models
