--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -25,9 +25,11 @@ jobs:
 
       - name: Generate code
         run: |
-          cd shared/heart_models 
+          cd shared/heart_models
           flutter pub get
-          dart run build_runner build --delete-conflicting-outputs 
+          dart run build_runner build --delete-conflicting-outputs
+          cd test
+          ls -la
           cd ../..
 
       - name: Run tests in Models
