feat: `ExerciseService` feat: starting `heart_db package`

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   go_router: ^14.6.3
+  heart_db:
+    path: 'shared/heart_db'
   heart_language:
     path: 'shared/heart_language'
   heart_models:
