--- a/shared/heart_db/pubspec.yaml
+++ b/shared/heart_db/pubspec.yaml
@@ -1,7 +1,7 @@
 name: heart_db
-description: "Local database"
-version: 0.0.1
-homepage: ''
+description: "Heart app's local database"
+version: 0.1.0
+homepage: 'https://github.com/kit-g/heart-of-yours'
 publish_to: none
 
 environment:
@@ -10,6 +10,7 @@ environment:
 dependencies:
   heart_models:
     path: '../heart_models'
+  logging: ^1.3.0
   path: ^1.9.0
   sqflite: ^2.4.1
 
