--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,12 +32,13 @@ dependencies:
   sentry_flutter: ^8.12.0
 
 dev_dependencies:
+  build_runner: ^2.4.14
+  flutter_launcher_icons: ^0.14.3
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
-  test: any
   mockito: ^5.4.2
-  build_runner: ^2.4.14
+  test: any
 
 flutter:
   uses-material-design: true
