--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,7 +48,7 @@ android {
         dev {
             dimension "default"
             applicationIdSuffix ".dev"
-            resValue "string", "app_name", "Heart_dev"
+            resValue "string", "app_name", "Heart dev"
         }
         prod {
             dimension "default"
