--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,8 +5,8 @@ publish_to: none
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.6.0
-  flutter: 3.27.1
+  sdk: "^3.6.0"
+  flutter: "^3.29.0"
 
 dependencies:
   app_settings: ^5.1.1
