--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 
 dependencies:
   app_settings: ^5.1.1
-  firebase_core: ^3.10.0
+  firebase_core: 3.12.1
   fl_chart: ^0.70.1
   flutter:
     sdk: flutter
