--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,11 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   flutter_localizations:
     sdk: flutter
-  go_router: ^14.6.3
+  go_router: ^14.8.1
   heart_api:
     path: 'shared/heart_api'
+  heart_charts:
+    path: 'shared/heart_charts'
   heart_db:
     path: 'shared/heart_db'
   heart_language:
@@ -32,7 +34,7 @@ dependencies:
     path: 'shared/heart_state'
   intl: any
   logging: ^1.3.0
-  package_info_plus: ^8.0.2
+  package_info_plus: ^8.3.0
   sentry_flutter: ^8.12.0
 
 dev_dependencies:
