--- a/shared/heart_api/pubspec.yaml
+++ b/shared/heart_api/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   network_utils:
     git:
       url: "https://github.com/kit-g/dart-network-utils.git"
+      ref: "dc94dbefe26dbb568c9851684eeb79d3b864edbb"
 
 dev_dependencies:
   flutter_lints: ^5.0.0
