--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,13 @@ dependencies:
     path: 'shared/heart_models'
   heart_state:
     path: 'shared/heart_state'
+  image_cropper: ^9.1.0
+  image_picker: ^1.1.2
   intl: any
   logging: ^1.3.0
+  mime: ^2.0.0
   package_info_plus: ^8.3.0
-  sentry_flutter: ^8.12.0
+  sentry_flutter: ^8.14.1
 
 dev_dependencies:
   build_runner: ^2.4.14
