--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,8 @@ environment:
 dependencies:
   app_settings: ^5.1.1
   cached_network_image: ^3.4.1
-  firebase_core: 3.12.1
+  firebase_analytics: ^11.4.5
+  firebase_core: 3.13.0
   fl_chart: ^0.70.1
   flutter:
     sdk: flutter
