--- a/flutter_launcher_icons-dev.yaml
+++ b/flutter_launcher_icons-dev.yaml
@@ -4,5 +4,8 @@ flutter_launcher_icons:
   min_sdk_android: 23
   ios: true
   remove_alpha_ios: true
+  macos:
+    generate: true
 
-#  to generate: dart run flutter_launcher_icons
+# to generate: dart run flutter_launcher_icons
+# https://www.figma.com/community/file/1040708197994685442
