--- a/flutter_launcher_icons-prod.yaml
+++ b/flutter_launcher_icons-prod.yaml
@@ -4,5 +4,10 @@ flutter_launcher_icons:
   min_sdk_android: 23
   ios: true
   remove_alpha_ios: true
+  macos:
+    generate: true
+    image_path: "assets/icons/launcher_main.png"
 
-#  to generate: dart run flutter_launcher_icons
+
+# to generate: dart run flutter_launcher_icons
+# https://www.figma.com/community/file/1040708197994685442
