--- a/shared/heart_state/pubspec.yaml
+++ b/shared/heart_state/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   firebase_core: 4.2.1
   flutter:
     sdk: flutter
-  google_sign_in: 6.3.0
+  google_sign_in: ^7.1.0
   heart_models:
     path: '../heart_models'
   provider: ^6.1.2
