--- a/macos/Runner/Release.entitlements
+++ b/macos/Runner/Release.entitlements
@@ -17,5 +17,7 @@
 		<string>$(AppIdentifierPrefix)com.google.GIDSignIn</string>
 		<string>$(AppIdentifierPrefix)$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	</array>
+	<key>com.apple.security.files.user-selected.read-only</key>
+    <true/>
 </dict>
 </plist>
