--- a/ios/Runner/Prod.entitlements
+++ b/ios/Runner/Prod.entitlements
@@ -8,7 +8,7 @@
 	</array>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:dev.app.heart-of.me</string>
+		<string>applinks:app.heart-of.me</string>
 	</array>
 </dict>
 </plist>
