--- a/shared/heart_db/pubspec.yaml
+++ b/shared/heart_db/pubspec.yaml
@@ -12,7 +12,8 @@ dependencies:
     path: '../heart_models'
   logging: ^1.3.0
   path: ^1.9.0
-  sqflite: ^2.4.1
+  sqflite: ^2.4.2
+  sqflite_common_ffi_web: ^1.0.0
 
 resolution: workspace
 
