--- a/flutter_launcher_icons-prod.yaml
+++ b/flutter_launcher_icons-prod.yaml
@@ -7,6 +7,9 @@ flutter_launcher_icons:
   macos:
     generate: true
     image_path: "assets/icons/launcher_main.png"
+  web:
+    generate: true
+    image_path: "assets/icons/launcher_main_macos.png"
 
 
 # to generate: dart run flutter_launcher_icons
