--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+    - assets/icons/
   fonts:
     - family: "Lato"
       fonts:
