--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+    - assets/icons/
   fonts:
     - family: "Lato"
       fonts:
