chore: bump to flutter 3.32 / dart 3.8 feat: google sign-in works

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   go_router: ^14.8.1
+  google_sign_in_web: 1.0.0 # required for the sign-in button on the web
   heart_api:
   heart_charts:
   heart_db:
