--- a/shared/heart_api/pubspec.yaml
+++ b/shared/heart_api/pubspec.yaml
@@ -10,11 +10,15 @@ environment:
 dependencies:
   heart_models:
     path: "../heart_models"
+  http: 1.3.0
   network_utils:
     git:
       url: "https://github.com/kit-g/dart-network-utils.git"
-      ref: "dc94dbefe26dbb568c9851684eeb79d3b864edbb"
+      ref: "0e1fa2e748581d7d76c5f48c21decb8090ffe8d9"
 
 dev_dependencies:
   flutter_lints: ^5.0.0
+  test: any
+  mockito: ^5.4.2
+  build_runner: ^2.4.6
 
