--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -4,9 +4,9 @@ on:
   push:
     branches:
       - main
-      - db
-  pull_request: {}
-  workflow_dispatch: {}
+      - db # todo
+  pull_request: { }
+  workflow_dispatch: { }
 
 jobs:
   test:
@@ -32,10 +32,10 @@ jobs:
           cd ../..
           cd shared/heart_api
           dart run build_runner build --delete-conflicting-outputs
-          cd ../cd 
+          cd ../..
           shared/heart_db
           dart run build_runner build --delete-conflicting-outputs
-          cd ../
+          cd ../..
 
       - name: Run tests in models
         run: flutter test shared/heart_models
