--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -33,7 +33,7 @@ jobs:
           cd shared/heart_api
           dart run build_runner build --delete-conflicting-outputs
           cd ../..
-          shared/heart_db
+          cd shared/heart_db
           dart run build_runner build --delete-conflicting-outputs
           cd ../..
 
