--- a/shared/heart_db/pubspec.yaml
+++ b/shared/heart_db/pubspec.yaml
@@ -15,6 +15,11 @@ dependencies:
   sqflite: ^2.4.1
 
 dev_dependencies:
-  test: any
+  flutter_test:
+    sdk: flutter
   flutter_lints: 4.0.0
+  mockito: ^5.4.2
+  build_runner: ^2.4.6
 
+dependency_overrides:
+  analyzer: ^6.11.0
