--- a/shared/heart_charts/pubspec.yaml
+++ b/shared/heart_charts/pubspec.yaml
@@ -13,7 +13,9 @@ dependencies:
     sdk: flutter
   fl_chart: ^0.70.1
 
+resolution: workspace
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
