--- a/shared/heart_language/pubspec.yaml
+++ b/shared/heart_language/pubspec.yaml
@@ -12,10 +12,12 @@ dependencies:
     sdk: flutter
   intl: any
 
+resolution: workspace
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   generate: true
