--- a/shared/heart_models/pubspec.yaml
+++ b/shared/heart_models/pubspec.yaml
@@ -6,11 +6,10 @@ publish_to: none
 environment:
   sdk: ^3.5.4
 
+resolution: workspace
+
 dev_dependencies:
-  flutter_lints: 4.0.0
+  flutter_lints: 6.0.0
   test: any
   mockito: ^5.4.2
   build_runner: ^2.4.6
-
-dependency_overrides:
-  analyzer: ^6.11.0
