--- a/shared/heart_state/pubspec.yaml
+++ b/shared/heart_state/pubspec.yaml
@@ -19,7 +19,9 @@ dependencies:
   shared_preferences: ^2.3.2
   sign_in_with_apple: ^6.1.4
 
+resolution: workspace
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^6.0.0
