--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -3,3 +3,5 @@ include: package:flutter_lints/flutter.yaml
 linter:
   rules:
     require_trailing_commas: true
+    prefer_const_constructors: true
+    prefer_final_in_for_each: true
