chore: some imports fixed

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -6,4 +6,5 @@ linter:
     prefer_const_constructors: true
     prefer_final_in_for_each: true
     unnecessary_underscores: false
-
+    avoid_positional_boolean_parameters: true
+    avoid_dynamic_calls: true
