--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -8,3 +8,4 @@ linter:
     unnecessary_underscores: false
     avoid_positional_boolean_parameters: true
     avoid_dynamic_calls: true
+    prefer_single_quotes: true
