--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -2,18 +2,48 @@ name: Unit Tests
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request: { }
   workflow_dispatch: { }
 
 jobs:
-  test:
+  test_packages:
+    name: "Pkg • ${{ matrix.package }}"
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        package:
+          - shared/heart_models
+          - shared/heart_api
+          - shared/heart_db
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version-file: pubspec.yaml
+          cache: true   # caches Flutter SDK + pub (nice speedup)
+
+      - name: Pub get (workspace)
+        run: flutter pub get
+
+      # Codegen only inside the package under test
+      - name: Generate code
+        working-directory: ${{ matrix.package }}
+        run: dart run build_runner build --delete-conflicting-outputs
+
+      - name: Run tests
+        run: flutter test ${{ matrix.package }}
+
+  test_app:
+    name: "App • tests"
+    runs-on: ubuntu-latest
+    needs: [ test_packages ]
+    steps:
+      - uses: actions/checkout@v4
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
@@ -21,28 +51,8 @@ jobs:
           flutter-version-file: pubspec.yaml
           cache: true
 
-      - name: Install dependencies
+      - name: Pub get (workspace)
         run: flutter pub get
-
-      - name: Generate code
-        run: |
-          cd shared/heart_models
-          dart run build_runner build --delete-conflicting-outputs
-          cd ../heart_api
-          dart run build_runner build --delete-conflicting-outputs
-          cd ../heart_db
-          dart run build_runner build --delete-conflicting-outputs
-          cd ../..
-
-      - name: Run tests in models
-        run: flutter test shared/heart_models
-
-      - name: Run tests in api
-        run: flutter test shared/heart_api
-
-      - name: Run tests in db
-        run: flutter test shared/heart_db
 
       - name: Run app tests
         run: flutter test
-
