--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,12 +45,12 @@ dependencies:
   sentry_flutter: ^8.14.1
 
 dev_dependencies:
-  build_runner: ^2.4.14
+  build_runner: 2.6.0
   flutter_launcher_icons: ^0.14.3
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
-  mockito: ^5.4.2
+  mockito: ^5.5.0
   test: any
 
 
