ci: include heart_state in unit-tests path filters

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -17,6 +17,7 @@ jobs:
           - shared/heart_models
           - shared/heart_api
           - shared/heart_db
+          - shared/heart_state
 
     steps:
       - uses: actions/checkout@v4
