--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,8 @@ dependencies:
   app_settings: ^5.1.1
   cached_network_image: ^3.4.1
   feedback: ^3.1.0
-  firebase_analytics: ^11.4.5
-  firebase_core: 3.13.0
+  firebase_analytics: 12.0.0
+  firebase_core: 4.0.0
   fl_chart: ^0.70.1
   flutter:
     sdk: flutter
