--- a/shared/heart_state/pubspec.yaml
+++ b/shared/heart_state/pubspec.yaml
@@ -8,8 +8,8 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
-  firebase_auth: ^5.5.1
-  firebase_core: ^3.12.1
+  firebase_auth: 6.0.0
+  firebase_core: 4.0.0
   flutter:
     sdk: flutter
   google_sign_in: ^6.2.2
@@ -27,3 +27,5 @@ dev_dependencies:
   flutter_lints: ^6.0.0
   mockito: ^5.5.0
   build_runner: 2.6.0
+  firebase_auth_mocks: ^0.15.0
+  google_sign_in_mocks: ^0.3.0
