--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cached_network_image: ^3.4.1
   feedback: ^3.1.0
   firebase_analytics: 12.0.0
+  firebase_auth: 6.0.0
   firebase_core: 4.0.0
   fl_chart: ^0.70.1
   flutter:
@@ -52,6 +53,7 @@ dev_dependencies:
   flutter_lints: ^6.0.0
   mockito: ^5.5.0
   test: any
+  firebase_auth_mocks: ^0.15.0
 
 
 flutter:
