--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,3 +9,6 @@ linter:
     avoid_positional_boolean_parameters: true
     avoid_dynamic_calls: true
     prefer_single_quotes: true
+
+formatter:
+  trailing_commas: preserve
