chore: linters added to heart_db and dart fix applied

--- a/shared/heart_db/analysis_options.yaml
+++ b/shared/heart_db/analysis_options.yaml
@@ -1,1 +1,10 @@
 include: package:flutter_lints/flutter.yaml
+
+linter:
+  rules:
+    require_trailing_commas: true
+    prefer_const_constructors: true
+    prefer_final_in_for_each: true
+    unnecessary_underscores: false
+    avoid_positional_boolean_parameters: true
+    avoid_dynamic_calls: true
