chore: add linter rules to analysis_options.yaml

--- a/shared/heart_language/analysis_options.yaml
+++ b/shared/heart_language/analysis_options.yaml
@@ -6,3 +6,13 @@ include: package:flutter_lints/flutter.yaml
 analyzer:
   exclude:
     - lib/l10n/**
+
+linter:
+  rules:
+    require_trailing_commas: true
+    prefer_const_constructors: true
+    prefer_final_in_for_each: true
+    unnecessary_underscores: false
+    avoid_positional_boolean_parameters: true
+    avoid_dynamic_calls: true
+    prefer_single_quotes: true
