chore: Kotlin and Android SDK versions updated

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,12 +27,12 @@ android {
         applicationId = "me.heart.android"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdkVersion 23
+        minSdkVersion flutter.minSdkVersion
         multiDexEnabled true
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
-        compileSdk 35
+        compileSdk 36
     }
 
     buildTypes {
