--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,11 +72,17 @@ flutter:
           style: normal
         - asset: assets/fonts/Lato/Lato-Light.ttf
           weight: 200
+
+    - family: "Noto Sans"
+      fonts:
+        - asset: assets/fonts/Noto_Sans/NotoSans-VariableFont_wdth,wght.ttf
+
     - family: "Daydream"
       fonts:
         - asset: assets/fonts/Daydream.ttf
           weight: 400
           style: normal
+
     - family: "Icons"
       fonts:
         - asset: assets/fonts/Icons.ttf
