--- a/shared/heart_language/pubspec.yaml
+++ b/shared/heart_language/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   intl: any
+#  intl_translation: any
 
 resolution: workspace
 
@@ -18,6 +19,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  args: ^2.4.2
+  csv: ^6.0.0
 
 flutter:
   generate: true
