--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -26,7 +26,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version-file: pubspec.yaml
-          cache: true   # caches Flutter SDK + pub (nice speedup)
+          cache: true
 
       - name: Pub get (workspace)
         run: flutter pub get
