--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,8 +5,8 @@ publish_to: none
 version: 1.0.0+1
 
 environment:
-  sdk: "^3.8.0"
-  flutter: "3.32.8"
+  sdk: "3.10.0-290.4.beta"
+  flutter: "3.38.0"
 
 workspace:
   - "shared/heart_api"
