--- a/shared/heart_language/analysis_options.yaml
+++ b/shared/heart_language/analysis_options.yaml
@@ -16,3 +16,7 @@ linter:
     avoid_positional_boolean_parameters: true
     avoid_dynamic_calls: true
     prefer_single_quotes: true
+
+formatter:
+  trailing_commas: preserve
+  page_width: 120
