--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ version: 1.0.0+1
 
 environment:
   sdk: "^3.10.0-290.4.beta"
-  flutter: "^3.38.0"
+  flutter: ">=3.38.0"
 
 workspace:
   - "shared/heart_api"
