--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -23,10 +23,12 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up Flutter
-        uses: subosito/flutter-action@v2
+        uses: flutter-actions/setup-flutter@v4
         with:
-          flutter-version-file: pubspec.yaml
+          channel: 'stable'
+          version: 'latest'
           cache: true
+          cache-sdk: true
 
       - name: Pub get (workspace)
         run: flutter pub get
@@ -47,10 +49,12 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up Flutter
-        uses: subosito/flutter-action@v2
+        uses: flutter-actions/setup-flutter@v4
         with:
-          flutter-version-file: pubspec.yaml
+          channel: 'stable'
+          version: 'latest'
           cache: true
+          cache-sdk: true
 
       - name: Pub get (workspace)
         run: flutter pub get
