--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: none
 version: 1.0.0+1
 
 environment:
-  sdk: "^3.10.0-290.4.beta"
+  sdk: "^3.10.0"
   flutter: ">=3.38.0"
 
 workspace:
