--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,8 @@ dependencies:
   cached_network_image: ^3.4.1
   feedback: ^3.1.0
   firebase_analytics: 12.0.0
-  firebase_auth: 6.0.0
-  firebase_core: 4.0.0
+  firebase_auth: 6.1.2
+  firebase_core: 4.2.1
   fl_chart: ^0.70.1
   flutter:
     sdk: flutter
@@ -44,12 +44,12 @@ dependencies:
   sentry_flutter: ^9.8.0
 
 dev_dependencies:
-  build_runner: 2.6.0
+  build_runner: ^2.10.4
   flutter_launcher_icons: ^0.14.3
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
-  mockito: ^5.5.0
+  mockito: ^5.6.1
   test: any
   firebase_auth_mocks: ^0.15.0
 
