--- a/shared/heart_state/pubspec.yaml
+++ b/shared/heart_state/pubspec.yaml
@@ -8,8 +8,8 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
-  firebase_auth: 6.0.0
-  firebase_core: 4.0.0
+  firebase_auth: 6.1.2
+  firebase_core: 4.2.1
   flutter:
     sdk: flutter
   google_sign_in: 6.3.0
@@ -25,6 +25,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
-  mockito: ^5.5.0
-  build_runner: 2.6.0
+  mockito: ^5.6.1
+  build_runner: ^2.10.4
   firebase_auth_mocks: ^0.15.0
+  coverage: ^1.3.0
