--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
     sdk: flutter
   flutter_colorpicker: ^1.1.0
   flutter_local_notifications: ^19.5.0
+  flutter_svg: ^2.2.3
   go_router: ^14.8.1
   heart_api:
   heart_charts:
@@ -59,6 +60,8 @@ flutter:
   assets:
     - assets/
     - assets/icons/
+    - assets/svg/
+
   fonts:
     - family: "Lato"
       fonts:
