--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,13 +17,13 @@ workspace:
   - "shared/heart_state"
 
 dependencies:
-  app_settings: ^5.1.1
+  app_settings: ^7.0.0
   cached_network_image: ^3.4.1
   feedback: ^3.1.0
-  firebase_analytics: 12.0.0
+  firebase_analytics: 12.0.4
   firebase_auth: 6.1.2
   firebase_core: 4.2.1
-  fl_chart: ^0.70.1
+  fl_chart: 1.1.1
   flutter:
     sdk: flutter
   flutter_colorpicker: ^1.1.0
@@ -31,20 +31,20 @@ dependencies:
   flutter_svg: ^2.2.3
   flutter_web_plugins:
     sdk: flutter
-  go_router: ^14.8.1
-  google_sign_in_web: 1.0.0 # required for the sign-in button on the web
+  go_router: ^17.0.0
+  google_sign_in_web: 1.1.0 # required for the sign-in button on the web
   heart_api:
   heart_charts:
   heart_db:
   heart_language:
   heart_models:
   heart_state:
-  image_cropper: ^9.1.0
+  image_cropper: ^11.0.0
   image_picker: ^1.1.2
   intl: any
   logging: ^1.3.0
   mime: ^2.0.0
-  package_info_plus: ^8.3.0
+  package_info_plus: ^9.0.0
   sentry_flutter: ^9.8.0
 
 dev_dependencies:
