--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
   pull_request: { }
   workflow_dispatch: { }
+  workflow_call: { } # allows other workflows to call this one
 
 jobs:
   test_packages:
