--- a/.github/workflows/android-dev.yml
+++ b/.github/workflows/android-dev.yml
@@ -16,17 +16,22 @@ permissions:
   contents: read
 
 jobs:
-  unit-tests:
-    uses: ./.github/workflows/unit-tests.yml
+#  unit-tests:
+#    uses: ./.github/workflows/unit-tests.yml
 
   deploy:
     runs-on: ubuntu-latest
-    needs: [ unit-tests ]
+#    needs: [ unit-tests ]
     env:
       AWS_REGION: "ca-central-1"
       AWS_ROLE: "arn:aws:iam::583168578067:role/HeartGitHubActionsDeployRole"
+      SECRETS_BUCKET: "583168578067-heart-static"
     steps:
       - uses: actions/checkout@v4
+
+      - name: Calculate Build Number
+        # 220 was the last build number before we started using GitHub Actions
+        run: echo "BUILD_NUMBER=$((GITHUB_RUN_NUMBER - 220))" >> $GITHUB_ENV
 
       - name: "Configure AWS Credentials"
         uses: aws-actions/configure-aws-credentials@v4
@@ -34,25 +39,22 @@ jobs:
           role-to-assume: ${{ env.AWS_ROLE }}
           aws-region: ${{ env.AWS_REGION }}
 
-#      - name: Fetch Keystore from S3
-#        run: aws s3 cp s3://your-bucket-name/keystore.jks android/keystore.jks
-#
-#      - name: Create key.properties
-#        run: |
-#          echo "storePassword=${{ secrets.ANDROID_STORE_PASSWORD }}" > android/key.properties
-#          echo "keyPassword=${{ secrets.ANDROID_KEY_PASSWORD }}" >> android/key.properties
-#          echo "keyAlias=dev" >> android/key.properties
-#          echo "storeFile=keystore.jks" >> android/key.properties
-#
-#      - name: Set up Flutter
-#        uses: flutter-actions/setup-flutter@v4
-#        with:
-#          channel: 'stable'
-#          version: 'latest'
-#
-#      - name: Build App Bundle (Dev)
-#        run: flutter build appbundle --release --flavor dev --build-number ${{ github.run_number }}
-#
+      - name: "Fetch keystore from S3"
+        run: |
+          aws s3 cp s3://${{ env.SECRETS_BUCKET }}/secrets/dev/android/keystore.jks android/keystore.jks
+          aws s3 cp s3://${{ env.SECRETS_BUCKET }}/secrets/dev/android/key.properties android/key.properties
+
+      - name: "Set up Flutter"
+        uses: flutter-actions/setup-flutter@v4
+        with:
+          channel: 'stable'
+          version: 'latest'
+          cache: true
+          cache-sdk: true
+
+      - name: "Build dev app bundle"
+        run: flutter build appbundle --release --flavor dev --build-number ${{ env.BUILD_NUMBER }}
+
 #      - name: Upload to Play Store (Internal Testing)
 #        uses: r0adkll/upload-google-play@v1
 #        with:
