--- a/.github/workflows/android-dev.yml
+++ b/.github/workflows/android-dev.yml
@@ -51,6 +51,17 @@ jobs:
           cache: true
           cache-sdk: true
 
+      - name: "Setup Gradle cache"
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+            
+
       - name: "Build dev app bundle"
         run: flutter build appbundle --release --flavor dev --build-number ${{ github.run_number }}
 
@@ -61,4 +72,4 @@ jobs:
           packageName: "me.heart.android.dev"
           releaseFiles: "build/app/outputs/bundle/devRelease/app-dev-release.aab"
           track: internal
-          status: completed
+          status: draft
