--- a/.github/workflows/android-dev.yml
+++ b/.github/workflows/android-dev.yml
@@ -6,22 +6,22 @@ on:
     branches: [ main, android-app ]
     tags:
       - "dev-*"
-#    paths:
-#      - 'lib/**'
-#      - 'android/**'
-#      - 'pubspec.yaml'
+    paths:
+      - 'lib/**'
+      - 'android/**'
+      - 'pubspec.yaml'
 
 permissions:
   id-token: write
   contents: read
 
 jobs:
-#  unit-tests:
-#    uses: ./.github/workflows/unit-tests.yml
+  unit-tests:
+    uses: ./.github/workflows/unit-tests.yml
 
   deploy:
     runs-on: ubuntu-latest
-#    needs: [ unit-tests ]
+    needs: [ unit-tests ]
     env:
       AWS_REGION: "ca-central-1"
       AWS_ROLE: "arn:aws:iam::583168578067:role/HeartGitHubActionsDeployRole"
