chore: dev branch removed

--- a/.github/workflows/android-dev.yml
+++ b/.github/workflows/android-dev.yml
@@ -3,7 +3,7 @@ name: "Deploy Dev to Play Store"
 on:
   workflow_dispatch: { }
   push:
-    branches: [ main, android-app ]
+    branches: [ main ]
     tags:
       - "dev-*"
     paths:
