chore: unit-tests job moved to android-dev workflow and dependency updated in dev deployment

--- a/.github/workflows/android-dev.yml
+++ b/.github/workflows/android-dev.yml
@@ -21,8 +21,14 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  deploy:
+  unit-tests:
+    name: "Unit Tests"
+    uses: ./.github/workflows/unit-tests.yml
+
+  dev:
     uses: ./.github/workflows/google-play-deployment.yml
+    name: "Deploy Dev"
+    needs: [ unit-tests ]
     with:
       app_id: 'me.heart.android.dev'
       aws_region: 'ca-central-1'
