--- a/.github/workflows/google-play-deployment.yml
+++ b/.github/workflows/google-play-deployment.yml
@@ -34,12 +34,9 @@ on:
         default: 'internal'
 
 jobs:
-  unit-tests:
-    uses: ./.github/workflows/unit-tests.yml
-
   deploy:
+    name: "Deploy to Google Play"
     runs-on: ubuntu-latest
-    needs: [ unit-tests ]
     steps:
       - uses: actions/checkout@v4
 
