--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^1.1.2
   intl: any
   logging: ^1.3.0
+  markdown_widget: ^2.3.2+8
   mime: ^2.0.0
   package_info_plus: ^9.0.0
   sentry_flutter: ^9.9.0
