--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   mime: ^2.0.0
   package_info_plus: ^9.0.0
   sentry_flutter: ^9.9.0
+  timezone: ^0.10.1
 
 dev_dependencies:
   build_runner: ^2.10.4
